[fix] fix wallet balance response and remove wallet route list print
